--- a/css/style.css
+++ b/css/style.css
@@ -308,26 +308,19 @@ header ul li a {
     font-size: 12px;
 }
 
+
+
 /*-----footer-----*/
 
 footer {
     margin-top: 30px;
     background:#305A8f;
     color: #fff;
+    font-family: 'Montserrat';
+    height: 250px;
+
 }
 
-footer h2 {
-    text-align: center;
-    padding-top: 20px;
-}
-
-footer .titulo-seccion {
-    color: var(--colorTitulos);
-}
-
-footer .copy {
-    color: #777777;
-}
 
 .redes-sociales {
     display: flex;
@@ -338,29 +331,61 @@ footer .copy {
 .redes-sociales i {
     font-size: 30px;
     padding: 20px;
-    padding-bottom: 60px;
+    margin-top: 50px;
+    
 }
 
 .seccion-vacia {
     height: 30px;   
 }
 
-/*formulario*/
-
-.form-content {
-    
-    background: linear-gradient(
-        50deg,
-        rgba(40, 42, 55, 1) 50%,
-        rgba(40, 42, 55, 0.7)
-        ),
-        url(img);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    padding: 50px;
-    width: 1000px;
-    border-radius: 25px;
-
+.firma-footer {
+    display: flex;
+    padding: 20px;
+    margin-top: 20px;
 }
 
+.contenedor-footer {
+    display: flex;
+    justify-content: space-between;
+   
+   
+}
+
+footer img {
+   height: 100px;
+}
+
+footer h4 {   
+    letter-spacing: 5px;
+}
+
+.firma-footer div {
+    padding: 20px;
+    line-height: 20px;
+    font-size: 12px;
+    margin-left: 20px;
+}
+
+.socios-footer {
+    padding-right: 20px;
+    margin-top: 20px;
+    display: flex;
+}
+
+.socios-footer img {
+    height: 80px;
+    padding-top: 20px;
+    margin-left: 20px;
+    
+}
+
+.firma-proyecto-b {
+    margin-left: 30px;
+    margin-top: 30px;
+  
+}
+
+.firma-proyecto-b img {
+    height: 25px;
+}
