--- a/css/style.css
+++ b/css/style.css
@@ -161,7 +161,7 @@ header ul li a {
 
 
 .quienes-somos {
-    height: 300px;
+    height: 250px;
     width: 90%;
     margin: 0 auto;
    
@@ -171,14 +171,14 @@ header ul li a {
     font-family: 'Montserrat';
     color: black;
     text-align: center;
-    letter-spacing: 30px;
+    letter-spacing: 25px;
 }
 
 .quienes-somos h2 {
     font-family: 'Montserrat';
     color: #777777;
     text-align: center;
-    letter-spacing: 5px;
+    letter-spacing: 4px;
     padding: 20px;
 }
 
@@ -188,6 +188,7 @@ header ul li a {
     text-align: center;
     letter-spacing: 3px;
     line-height: 35px;
+    margin-top: 20px;
 }
 
 
@@ -317,22 +318,8 @@ footer {
     background:#305A8f;
     color: #fff;
     font-family: 'Montserrat';
-    height: 250px;
+    height: 200px;
 
-}
-
-
-.redes-sociales {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-}
-
-.redes-sociales i {
-    font-size: 30px;
-    padding: 20px;
-    margin-top: 50px;
-    
 }
 
 .seccion-vacia {
@@ -343,13 +330,13 @@ footer {
     display: flex;
     padding: 20px;
     margin-top: 20px;
+    align-items: center;
 }
 
 .contenedor-footer {
     display: flex;
-    justify-content: space-between;
-   
-   
+    justify-content: space-around;
+    align-items: center;     
 }
 
 footer img {
@@ -367,24 +354,6 @@ footer h4 {
     margin-left: 20px;
 }
 
-.socios-footer {
-    padding-right: 20px;
-    margin-top: 20px;
-    display: flex;
-}
-
-.socios-footer img {
-    height: 80px;
-    padding-top: 20px;
-    margin-left: 20px;
-    
-}
-
-.firma-proyecto-b {
-    margin-left: 30px;
-    margin-top: 30px;
-  
-}
 
 .firma-proyecto-b img {
     height: 25px;
